# CircularLogBuffer

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
Include/: CircularLogs.hpp  CircularLogsIterator.hpp  CircularMemory.hpp  CircularMemoryIterator.hpp
Tests/: CMakeLists.txt  catch_main.cpp  circularLog.unit.cpp  circularLogIterators.unit.cpp  circularMemory.unit.cpp  circularMemoryIterators.unit.cpp  test_CircularLogs.cpp  test_CircularLogsIterator.cpp
cmake/: CatchTestUtils.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake  ccache.cmake  clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  projectSettings.cmake
